--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   
   build_runner:
   json_serializable:
+  http: ^0.12.0+4
 
 
 # For information on the generic Dart part of this file, see the
